made the header section consistent

--- a/campus-facilities.html
+++ b/campus-facilities.html
@@ -33,50 +33,55 @@
 
 <body class="campus-facilities-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+ 
+	<header id="header" class="header d-flex align-items-center fixed-top">
+		<div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logoo.png" alt="School Logo">
-      </a>
+			<a href="index.html" class="logo d-flex align-items-center">
+				<!-- Uncomment the line below if you also wish to use an image logo -->
+				<img src="assets/img/logoo.png" alt="School Logo">
+			</a>
 
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li class="dropdown"><a href="about.html" class="active"><span>About</span> <i
-                class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="students-life.html">Student Clubs and Organizations</a></li>
-              <li><a href="campus-facilities.html" class="active">Campus Facilities</a></li>
-            </ul>
-          </li>
-          <li><a href="admissions.html">Admissions</a></li>
-          <li><a href="academics.html">Academics</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="alumni.html">Alumni</a></li>
-          <li><a href="employ.html">Employment</a></li>
-          <li class="dropdown"><a href="#"><span>Quick Links</span> <i
-                class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
-              <li><a href="news-details.html">Blog</a></li>
-              <li><a href="event-details.html">Student Accommodation Info</a></li>
-              <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-              <li><a href="terms-of-service.html">Portal Login</a></li>
-              <li><a href="community.html">Community Engagement</a></li>
-              <li><a href="news.html">News</a></li>
-              <li><a href="feedback.html">Feedback and Surveys</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
+			<nav id="navmenu" class="navmenu">
+				<ul>
+					<li><a href="index.html" class="active">Home</a></li>
+					<li class="dropdown"><a href="about.html"><span>About</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="students-life.html">Student Life</a></li>
+							<li><a href="campus-facilities.html">Co-curricular Programs</a></li>
 
-    </div>
-  </header>
+						</ul>
+					</li>
+
+					<li><a href="admissions.html">Admissions</a></li>
+					<li><a href="academics.html">Academics</a></li>
+					<li><a href="events.html">Events</a></li>
+					<li><a href="alumni.html">Alumni</a></li>
+					<li><a href="employ.html">Employment</a></li>
+					<li class="dropdown"><a href="#"><span>Quick Links</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
+							<li><a href="news-details.html">Blog</a></li>
+							<li><a href="event-details.html">Student Accommodation Info</a></li>
+							<li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
+							<li><a href="terms-of-service.html">Portal Login</a></li>
+							<li><a href="community.html">Community Engagement</a></li>
+							<li><a href="news.html">News</a></li>
+							<li><a href="feedback.html">Feedback and Surveys</a></li>
+						</ul>
+					</li>
+
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+				<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+			</nav>
+
+		</div>
+	</header>
+
 
   <main class="main">
 
