--- a/campus-facilities.html
+++ b/campus-facilities.html
@@ -529,7 +529,7 @@
           <h4>Support</h4>
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
+            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
             <li><a href="student-life.html">Student Life</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
