--- a/events.html
+++ b/events.html
@@ -62,7 +62,7 @@
 					<li class="dropdown"><a href="#"><span>Quick Links</span> <i
 								class="bi bi-chevron-down toggle-dropdown"></i></a>
 						<ul>
-							<li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
+							<li><a href="select-btw.html">Business plan &amp; school polices</a></li>
 							<li><a href="news-details.html">Blog</a></li>
 							<li><a href="event-details.html">Student Accommodation Info</a></li>
 							<li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
@@ -325,7 +325,7 @@
           <h4>Support</h4>
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
+            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
             <li><a href="student-life.html">Student Life</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
