--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -62,7 +62,7 @@
 					<li class="dropdown"><a href="#"><span>Quick Links</span> <i
 								class="bi bi-chevron-down toggle-dropdown"></i></a>
 						<ul>
-							<li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
+							<li><a href="select-btw.html">Business plan &amp; school polices</a></li>
 							<li><a href="news-details.html">Blog</a></li>
 							<li><a href="event-details.html">Student Accommodation Info</a></li>
 							<li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
