updated header links-Becky

--- a/admissions.html
+++ b/admissions.html
@@ -55,24 +55,6 @@
 						</ul>
 					</li>
 
-          <li><a href="admissions.html">Admissions</a></li>
-          <li><a href="academics.html">Academics</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="alumni.html">Alumni</a></li>
-          <li><a href="employ.html">Employment</a></li>
-          <li class="dropdown"><a href="#"><span>Quick Links</span> <i
-                class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-              <li><a href="news-details.html">Blog</a></li>
-              <li><a href="event-details.html">Student Accommodation Info</a></li>
-              <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-              <li><a href="terms-of-service.html">Portal Login</a></li>
-              <li><a href="community.html">Community Engagement</a></li>
-              <li><a href="news.html">News</a></li>
-              <li><a href="feedback.html">Feedback and Surveys</a></li>
-            </ul>
-          </li>
 					<li><a href="admissions.html">Admissions</a></li>
 					<li><a href="academics.html">Academics</a></li>
 					<li><a href="events.html">Events</a></li>
@@ -81,14 +63,13 @@
 					<li class="dropdown"><a href="#"><span>Quick Links</span> <i
 								class="bi bi-chevron-down toggle-dropdown"></i></a>
 						<ul>
-							<li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
-							<li><a href="news-details.html">Blog</a></li>
-							<li><a href="event-details.html">Student Accommodation Info</a></li>
+							<li><a href="select-btw.html">Business plan &amp; school polices</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="accomodation.html">Student Accommodation Info</a></li>
 							<li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-							<li><a href="terms-of-service.html">Portal Login</a></li>
+							<li><a href="portal.html">Portal Login</a></li>
 							<li><a href="community.html">Community Engagement</a></li>
 							<li><a href="news.html">News</a></li>
-							<li><a href="feedback.html">Feedback and Surveys</a></li>
 						</ul>
 					</li>
 
@@ -99,7 +80,6 @@
 
 		</div>
 	</header>
-
 
  <main class="main">
 
