--- a/students-life.html
+++ b/students-life.html
@@ -34,7 +34,7 @@
 <body class="students-life-page">
 
   
-	<header id="header" class="header d-flex align-items-center fixed-top">
+<header id="header" class="header d-flex align-items-center fixed-top">
 		<div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
 			<a href="index.html" class="logo d-flex align-items-center">
@@ -63,14 +63,13 @@
 					<li class="dropdown"><a href="#"><span>Quick Links</span> <i
 								class="bi bi-chevron-down toggle-dropdown"></i></a>
 						<ul>
-							<li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
-							<li><a href="news-details.html">Blog</a></li>
-							<li><a href="event-details.html">Student Accommodation Info</a></li>
+							<li><a href="select-btw.html">Business plan &amp; school polices</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="accomodation.html">Student Accommodation Info</a></li>
 							<li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-							<li><a href="terms-of-service.html">Portal Login</a></li>
+							<li><a href="portal.html">Portal Login</a></li>
 							<li><a href="community.html">Community Engagement</a></li>
 							<li><a href="news.html">News</a></li>
-							<li><a href="feedback.html">Feedback and Surveys</a></li>
 						</ul>
 					</li>
 
@@ -81,7 +80,6 @@
 
 		</div>
 	</header>
-
 
 
   <main class="main">
