--- a/campus-facilities.html
+++ b/campus-facilities.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Campus Facilities - Brenitoch</title>
+  <title>School Facilities - Brenitoch</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -86,19 +86,19 @@
     <!-- Page Title -->
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
-        <h1>Campus &amp; Facilities</h1>
-        <p>Discover our modern campus facilities designed to support holistic student development and academic
+        <h1>School Facilities</h1>
+        <p>Discover our modern School Facilities designed to support holistic student development and academic
           excellence at Breinitoch School.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Campus Facilities</li>
+            <li class="current">School Facilities</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Campus Facilities Section -->
+    <!-- School Facilities Section -->
     <section id="campus-facilities" class="campus-facilities section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -108,7 +108,7 @@
           <div class="row align-items-center">
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
               <div class="intro-content">
-                <h2 class="fw-bold">Experience Our Campus</h2>
+                <h2 class="fw-bold">Experience Our School</h2>
                 <p class="lead">Discover state-of-the-art facilities designed to inspire learning and growth</p>
                 <p>Breinitoch School in Juja, Kiambu County, offers a vibrant campus environment with modern facilities
                   that support academic excellence, physical wellness, and community engagement. Our infrastructure is
@@ -362,7 +362,6 @@
                         class="img-fluid rounded mb-3">
                       <h4>School Diversity</h4>
                       <p>Convenient stores for school supplies, snacks, and merchandise.</p>
-                      <span class="info-badge"><i class="bi bi-info-circle"></i> 8 Locations</span>
                     </div>
                   </div>
                 </div>
@@ -411,12 +410,12 @@
           </div>
         </div>
 
-        <!-- Campus Map -->
+        <!-- School Map -->
         <div class="campus-map-section" data-aos="fade-up" data-aos-delay="200">
           <div class="row align-items-center">
             <div class="col-lg-5" data-aos="fade-right" data-aos-delay="100">
               <div class="map-info">
-                <h2>Campus Map</h2>
+                <h2>School Map</h2>
                 <p>Navigate our expansive campus with ease using our interactive map. Locate buildings, facilities, and
                   services to find your way around.</p>
                 <div class="map-legend">
@@ -458,7 +457,7 @@
 
       </div>
 
-    </section><!-- /Campus Facilities Section -->
+    </section><!-- /School Facilities Section -->
 
   </main>
 
@@ -504,7 +503,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Academics</h4>
           <ul>
-            <li><a href="campus-facilities.html">Campus Facilities</a></li>
+            <li><a href="campus-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
             <li><a href="news.html">News & Updates</a></li>
