--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
 				<div class="col-lg-2 col-md-3 footer-links">
 					<h4>Academics</h4>
 					<ul>
-						<li><a href="campus-facilities.html">Campus Facilities</a></li>
+						<li><a href="campus-facilities.html">School Facilities</a></li>
 						<li><a href="events.html">Events</a></li>
 						<li><a href="community.html">Community Engagement</a></li>
 						<li><a href="news.html">News & Updates</a></li>
