--- a/select-btw.html
+++ b/select-btw.html
@@ -78,40 +78,158 @@
 
         </div>
     </header>
-    
-    <main class="main">
 
-        <!-- Page Title -->
-        <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
-            <div class="container position-relative">
-                <h1>Starter Page</h1>
-                <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda
-                    numquam molestias.</p>
-                <nav class="breadcrumbs">
-                    <ol>
-                        <li><a href="index.html">Home</a></li>
-                        <li class="current">Starter Page</li>
-                    </ol>
-                </nav>
-            </div>
-        </div><!-- End Page Title -->
+  <main class="main">
 
-        <!-- Starter Section Section -->
-        <section id="starter-section" class="starter-section section">
+  <!-- Page Title -->
+  <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
+    <div class="container position-relative">
+      <h1>Business Plan and Policies</h1>
+      <p>Our commitment to excellence, safety, and transparency guides every aspect of Brenitoch Primary School’s operations and future growth.</p>
+      <nav class="breadcrumbs">
+        <ol>
+          <li><a href="index.html">Home</a></li>
+          <li class="current">Business Plan and Policies</li>
+        </ol>
+      </nav>
+    </div>
+  </div>
+  <!-- End Page Title -->
 
-            <!-- Section Title -->
-            <div class="container section-title" data-aos="fade-up">
-                <h2>Starter Section</h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-            </div><!-- End Section Title -->
+  <!-- Business Plan Section -->
+  <section id="business-plan" class="section light-background">
+    <div class="container" data-aos="fade-up">
 
-            <div class="container" data-aos="fade-up">
-                <p>Use this page as a starter for your own custom pages.</p>
-            </div>
+      <div class="section-title">
+        <h2>Our Strategic Direction</h2>
+        <p>Brenitoch Primary School is founded on a vision to nurture confident, capable, and compassionate learners through an inclusive and forward-thinking educational approach.</p>
+      </div>
 
-        </section><!-- /Starter Section Section -->
+      <div class="content">
+        <h3>School Targets</h3>
+        <ul>
+          <li>Provide a safe, inclusive environment where every child can thrive.</li>
+          <li>Foster whole-child development — academic, emotional, social, and physical.</li>
+          <li>Maintain strong teacher–student relationships and high academic standards.</li>
+          <li>Implement evidence-based, high-quality teaching and learning practices.</li>
+          <li>Promote transparent, ongoing communication with families.</li>
+          <li>Ensure excellent pastoral care for student and staff wellbeing.</li>
+          <li>Achieve more than 90% in Attitude, Behaviour, and Effort assessments.</li>
+          <li>Sustain student attendance at or above 92%.</li>
+        </ul>
+      </div>
 
-    </main>
+      <div class="content mt-4">
+        <h3>Focus Areas and Strategies</h3>
+        <p><strong>Success for All Students</strong></p>
+        <ul>
+          <li>Deliver engaging, differentiated instruction tailored to diverse learners.</li>
+          <li>Use explicit teaching approaches in Literacy and Numeracy.</li>
+          <li>Integrate technology to enhance learning experiences.</li>
+          <li>Encourage positive social behaviour and community responsibility.</li>
+        </ul>
+
+        <p class="mt-3"><strong>High-Quality Teaching and Learning</strong></p>
+        <ul>
+          <li>Foster continuous professional development for teachers.</li>
+          <li>Develop comprehensive teaching resources and creative programs.</li>
+          <li>Use data-driven strategies to improve outcomes.</li>
+        </ul>
+
+        <p class="mt-3"><strong>Culture and Care</strong></p>
+        <ul>
+          <li>Cultivate respectful, trusting relationships between students and staff.</li>
+          <li>Celebrate diversity and cultural responsiveness.</li>
+          <li>Support student wellbeing and smooth educational transitions.</li>
+        </ul>
+
+        <p class="mt-3"><strong>Community Partnerships</strong></p>
+        <ul>
+          <li>Deepen engagement with parents, local communities, and partners.</li>
+          <li>Encourage student involvement in community service.</li>
+          <li>Collaborate with traditional landowners and regional education networks.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <!-- /Business Plan Section -->
+
+
+  <!-- Child Protection Policy -->
+  <section id="child-protection" class="section">
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-title">
+        <h2>Child Rights Protection Policy</h2>
+        <p>We are fully committed to upholding the rights, dignity, and wellbeing of every child entrusted to our care.</p>
+      </div>
+
+      <div class="content">
+        <h3>Purpose & Scope</h3>
+        <p>This policy safeguards all children at Brenitoch Primary School and ensures a safe, inclusive learning environment in line with the UN Convention on the Rights of the Child and national protection laws.</p>
+
+        <h3>Core Commitments</h3>
+        <ul>
+          <li><strong>Zero tolerance for abuse:</strong> Any form of abuse or neglect is strictly prohibited.</li>
+          <li><strong>Non-discrimination:</strong> Equal protection for every child, regardless of background.</li>
+          <li><strong>Participation:</strong> Students’ voices are heard and respected.</li>
+          <li><strong>Safe reporting:</strong> Confidential, accessible reporting channels for concerns.</li>
+          <li><strong>Support & recovery:</strong> Timely care and counseling for affected children.</li>
+        </ul>
+
+        <h3>Roles and Responsibilities</h3>
+        <ul>
+          <li><strong>Leadership:</strong> Appoint a Child Protection Officer and ensure compliance.</li>
+          <li><strong>Teachers & Staff:</strong> Undertake regular training and report concerns promptly.</li>
+          <li><strong>Parents & Guardians:</strong> Collaborate in promoting safety and awareness.</li>
+          <li><strong>Students:</strong> Understand their rights and how to seek help.</li>
+        </ul>
+
+        <h3>Monitoring and Review</h3>
+        <p>The Child Protection Committee reviews this policy annually and collects feedback from students, staff, and parents to ensure continuous improvement.</p>
+      </div>
+    </div>
+  </section>
+  <!-- /Child Protection Policy -->
+
+
+  <!-- Data Protection Policy -->
+  <section id="data-protection" class="section light-background">
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-title">
+        <h2>Data Protection Policy</h2>
+        <p>We value privacy, integrity, and security in managing all personal and school-related information.</p>
+      </div>
+
+      <div class="content">
+        <h3>Purpose & Scope</h3>
+        <p>This policy ensures that all personal data collected or processed by Brenitoch Primary School is handled lawfully, transparently, and securely in accordance with the Kenya Data Protection Act.</p>
+
+        <h3>Key Principles</h3>
+        <ul>
+          <li>Data is collected only for legitimate educational or legal purposes.</li>
+          <li>Only necessary data is stored and retained securely.</li>
+          <li>Accurate and up-to-date records are maintained.</li>
+          <li>Strict access control and encryption protect all sensitive data.</li>
+        </ul>
+
+        <h3>Data Subject Rights</h3>
+        <ul>
+          <li>Right to be informed about how their data is used.</li>
+          <li>Right to access and correct personal information.</li>
+          <li>Right to request deletion or restriction of certain data.</li>
+          <li>Right to data portability where applicable.</li>
+        </ul>
+
+        <h3>Monitoring & Compliance</h3>
+        <p>The appointed Data Protection Officer (DPO) ensures adherence to data laws, handles subject requests, and oversees incident responses. Regular audits and training sessions promote privacy awareness among staff and parents.</p>
+      </div>
+    </div>
+  </section>
+  <!-- /Data Protection Policy -->
+
+</main>
 
  <footer id="footer" class="footer position-relative dark-background">
     <div class="container footer-top">
