--- a/portal.html
+++ b/portal.html
@@ -79,213 +79,106 @@
 
         </div>
     </header>
+<main class="main">
 
-  <main class="main">
+  <!-- Page Title -->
+  <div class="page-title dark-background" style="background-image: url(assets/img/education/portal-banner.webp);">
+    <div class="container position-relative text-center">
+      <h1>Brenitoch School Portal</h1>
+      <p>A smarter, faster, and more connected way to access everything Brenitoch — launching soon!</p>
+      <nav class="breadcrumbs">
+        <ol>
+          <li><a href="index.html">Home</a></li>
+          <li class="current">Portal Login</li>
+        </ol>
+      </nav>
+    </div>
+  </div>
+  <!-- End Page Title -->
 
-    <!-- Page Title -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
-      <div class="container position-relative">
-        <h1>Terms Of Service</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
-        <nav class="breadcrumbs">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Terms Of Service</li>
-          </ol>
-        </nav>
+  <!-- Portal Section -->
+  <section id="portal-intro" class="portal-intro section">
+    <div class="container" data-aos="fade-up">
+
+      <!-- Portal Hero -->
+      <div class="portal-hero text-center" data-aos="zoom-in">
+        <span class="badge">Coming Early 2026</span>
+        <h2>Introducing the Brenitoch Digital School Portal</h2>
+        <p>Our new school portal will empower students, teachers, parents, and administrators to access information and collaborate seamlessly — anytime, anywhere.</p>
+        <div class="portal-actions mt-4">
+          <a href="mailto:info@brenitochschool.com" class="btn-primary me-2">Get Notified</a>
+          <a href="contact.html" class="btn-outline">Contact Us</a>
+        </div>
       </div>
-    </div><!-- End Page Title -->
 
-    <!-- Terms Of Service Section -->
-    <section id="terms-of-service" class="terms-of-service section">
+      <!-- Portal Features -->
+      <div class="portal-features mt-5" data-aos="fade-up">
+        <div class="row gy-4">
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-card">
+              <div class="icon"><i class="bi bi-person-workspace"></i></div>
+              <h4>Student Access</h4>
+              <p>Students will log in to view assignments, grades, announcements, and personalized learning resources.</p>
+            </div>
+          </div>
 
-      <div class="container" data-aos="fade-up">
-        <!-- Hero Section -->
-        <div class="terms-hero" data-aos="fade-up">
-          <span class="badge">Last Updated: February 27, 2025</span>
-          <h2>Terms &amp; Conditions</h2>
-          <p>These terms and conditions outline your rights and responsibilities when using our services</p>
-          <div class="terms-highlights">
-            <div class="highlight-item">
-              <i class="bi bi-shield-check"></i>
-              <span>Secure Service</span>
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-card">
+              <div class="icon"><i class="bi bi-person-video2"></i></div>
+              <h4>Teacher Dashboard</h4>
+              <p>Teachers will manage class schedules, grade submissions, and communicate directly with students and parents.</p>
             </div>
-            <div class="highlight-item">
-              <i class="bi bi-lock"></i>
-              <span>Data Protection</span>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-card">
+              <div class="icon"><i class="bi bi-people"></i></div>
+              <h4>Parent Portal</h4>
+              <p>Parents will easily track student progress, attendance, fee payments, and receive important school updates.</p>
             </div>
-            <div class="highlight-item">
-              <i class="bi bi-hand-thumbs-up"></i>
-              <span>Fair Terms</span>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-card">
+              <div class="icon"><i class="bi bi-building-gear"></i></div>
+              <h4>Admin Panel</h4>
+              <p>Administrative staff will have secure tools for managing users, classes, finances, and school communication.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-card">
+              <div class="icon"><i class="bi bi-shield-lock"></i></div>
+              <h4>Secure Login</h4>
+              <p>Data security is a top priority — the portal will include role-based access, data encryption, and multi-layer authentication.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-card">
+              <div class="icon"><i class="bi bi-cloud-arrow-up"></i></div>
+              <h4>24/7 Access</h4>
+              <p>Access your Brenitoch experience anytime, on any device, from anywhere in the world.</p>
             </div>
           </div>
         </div>
-
-        <!-- Terms Grid -->
-        <div class="terms-grid" data-aos="fade-up">
-          <!-- Agreement Card -->
-          <div class="terms-card" data-aos="fade-up" data-aos-delay="100">
-            <div class="card-header">
-              <div class="header-icon">
-                <i class="bi bi-file-text"></i>
-              </div>
-              <h3>Agreement Terms</h3>
-            </div>
-            <div class="card-content">
-              <p>By accessing our service, you confirm that you are agreeing to be bound by these terms of service. These terms apply to all users and visitors.</p>
-              <ul class="check-list">
-                <li>Acceptance of terms</li>
-                <li>Compliance with laws</li>
-                <li>Service availability</li>
-                <li>User obligations</li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- User Rights Card -->
-          <div class="terms-card" data-aos="fade-up" data-aos-delay="200">
-            <div class="card-header">
-              <div class="header-icon">
-                <i class="bi bi-person-check"></i>
-              </div>
-              <h3>User Rights</h3>
-            </div>
-            <div class="card-content">
-              <p>As a user, you have specific rights when using our service, including data privacy and access to features.</p>
-              <ul class="check-list">
-                <li>Account control</li>
-                <li>Data privacy</li>
-                <li>Service access</li>
-                <li>Content ownership</li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Restrictions Card -->
-          <div class="terms-card" data-aos="fade-up" data-aos-delay="300">
-            <div class="card-header">
-              <div class="header-icon">
-                <i class="bi bi-shield-x"></i>
-              </div>
-              <h3>Restrictions</h3>
-            </div>
-            <div class="card-content">
-              <div class="restrictions-list">
-                <div class="restriction-item">
-                  <i class="bi bi-x-circle"></i>
-                  <span>No unauthorized data collection</span>
-                </div>
-                <div class="restriction-item">
-                  <i class="bi bi-x-circle"></i>
-                  <span>No service misuse</span>
-                </div>
-                <div class="restriction-item">
-                  <i class="bi bi-x-circle"></i>
-                  <span>No intellectual property violation</span>
-                </div>
-                <div class="restriction-item">
-                  <i class="bi bi-x-circle"></i>
-                  <span>No harmful activities</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Key Points -->
-        <div class="terms-points" data-aos="fade-up">
-          <h3>Key Points to Note</h3>
-          <div class="points-grid">
-            <div class="point-item">
-              <div class="point-icon">
-                <i class="bi bi-clock-history"></i>
-              </div>
-              <div class="point-content">
-                <h4>Service Availability</h4>
-                <p>We strive to provide uninterrupted service but cannot guarantee 100% availability.</p>
-              </div>
-            </div>
-
-            <div class="point-item">
-              <div class="point-icon">
-                <i class="bi bi-shield-check"></i>
-              </div>
-              <div class="point-content">
-                <h4>Privacy Protection</h4>
-                <p>Your data is protected according to our privacy policy and applicable laws.</p>
-              </div>
-            </div>
-
-            <div class="point-item">
-              <div class="point-icon">
-                <i class="bi bi-pencil-square"></i>
-              </div>
-              <div class="point-content">
-                <h4>Content Rights</h4>
-                <p>You retain rights to your content while granting us license to use it.</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Important Notices -->
-          <div class="terms-notices" data-aos="fade-up">
-            <div class="notice-wrapper">
-              <div class="notice-items">
-                <div class="notice-item">
-                  <div class="notice-marker">
-                    <i class="bi bi-exclamation-circle"></i>
-                  </div>
-                  <div class="notice-content">
-                    <h4>Service Modifications</h4>
-                    <p>We reserve the right to modify or discontinue any part of our service with or without notice.</p>
-                  </div>
-                </div>
-
-                <div class="notice-item">
-                  <div class="notice-marker">
-                    <i class="bi bi-exclamation-circle"></i>
-                  </div>
-                  <div class="notice-content">
-                    <h4>Account Termination</h4>
-                    <p>We may terminate accounts that violate these terms or for any other reason at our discretion.</p>
-                  </div>
-                </div>
-
-                <div class="notice-item">
-                  <div class="notice-marker">
-                    <i class="bi bi-exclamation-circle"></i>
-                  </div>
-                  <div class="notice-content">
-                    <h4>Terms Updates</h4>
-                    <p>These terms may be updated at any time. Continued use of the service implies acceptance.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Contact Box -->
-          <div class="terms-contact" data-aos="fade-up">
-            <div class="contact-wrapper">
-              <div class="contact-content">
-                <div class="contact-text">
-                  <h4>Need Clarification?</h4>
-                  <p>If you have questions about these terms, our support team is here to help.</p>
-                </div>
-                <div class="contact-actions">
-                  <a href="#" class="btn-primary">Contact Support</a>
-                  <a href="#" class="btn-outline">Download Terms</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
       </div>
-    </section><!-- /Terms Of Service Section -->
 
-  </main>
+      <!-- Countdown / Teaser -->
+      <div class="portal-countdown text-center mt-5" data-aos="zoom-in">
+        <h3>We’re almost ready to launch!</h3>
+        <p>Our development team is working hard to deliver the best experience possible. Stay tuned for updates.</p>
+       
+      </div>
+
+
+
+    </div>
+  </section>
+  <!-- /Portal Section -->
+
+</main>
+
 
   <footer id="footer" class="footer position-relative dark-background">
 
