missing media file fixed - stephen

--- a/community.html
+++ b/community.html
@@ -218,7 +218,7 @@
 
           <div class="col-md-4">
             <div class="card shadow-sm h-100 border-0">
-              <img src="assets/img/community-engagement/tree-planting-2.jpeg class="card-img-top" alt="Cultural Event">
+              <img src="assets/img/community-engagement/tree-planting-2.jpeg" class="card-img-top" alt="Cultural Event">
               <div class="card-body">
                 <h5 class="card-title">Cultural & Sports Events</h5>
                 <p class="card-text">
