--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </script>
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<img src="assets/img/education/education-1.webp" alt="Slide 1" class="img-fluid"
+							<img src="assets/img/education/home-slider-1.webp" alt="Slide 1" class="img-fluid"
 								style="width: 100%; height: 100%; object-fit: cover;">
 						</div>
 						<div class="swiper-slide">
@@ -301,6 +301,8 @@
 					</div>
 				</div>
 
+				
+
 			</div>
 
 		</section><!-- /About Section -->
@@ -311,7 +313,7 @@
 			<!-- Section Title -->
 			<div class="container section-title" data-aos="fade-up">
 				<h2>Our Academic Programs</h2>
-				<p>Comprehensive education from preschool through high school, with specialized support for every
+				<p>Comprehensive education from preschool through Homeschooling, with specialized support for every
 					learner</p>
 			</div><!-- End Section Title -->
 
@@ -323,7 +325,7 @@
 						<li data-filter=".filter-preschool">Preschool</li>
 						<li data-filter=".filter-elementary">Elementary</li>
 						<li data-filter=".filter-middle">Middle School</li>
-						<li data-filter=".filter-high">High School</li>
+						<li data-filter=".filter-high">Homeschooling</li>
 					</ul>
 
 					<div class="row g-4 isotope-container">
@@ -413,7 +415,7 @@
 
 						<div class="col-lg-6 isotope-item filter-high" data-aos="zoom-in" data-aos-delay="100">
 							<div class="program-item">
-								<div class="program-badge">High School</div>
+								<div class="program-badge">Homeschooling</div>
 								<div class="row g-0">
 									<div class="col-md-4">
 										<div class="program-image-wrapper">
@@ -423,7 +425,7 @@
 									</div>
 									<div class="col-md-8">
 										<div class="program-content">
-											<h3>High School</h3>
+											<h3>Homeschooling</h3>
 											<div class="program-highlights">
 												<span><i class="bi bi-clock"></i> Ages 15-18</span>
 												<span><i class="bi bi-people-fill"></i> Form 1-4</span>
