--- a/community.html
+++ b/community.html
@@ -232,6 +232,22 @@
       </div>
     </section>
     <!-- /Engagement & Events -->
+          <div class="col-md-4">
+            <div class="card shadow-sm h-100 border-0">
+              <img src="assets/img/community-engagement/contectivity.jpeg" class="card-img-top" alt="Cultural Event">
+              <div class="card-body">
+                <h5 class="card-title">Cultural & Sports Events</h5>
+                <p class="card-text">
+                  Brenitoch celebrates diversity through arts, music, and sports days — bringing families and friends
+                  together in joy and unity.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /Engagement & Events -->
 
 
     <!-- Call to Action -->
