--- a/academics.html
+++ b/academics.html
@@ -164,7 +164,7 @@
               <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                 <div class="program-item undergraduate">
                   <div class="program-header">
-                    <img src="assets/img/education/activities-6.webp" alt="Preschool" class="img-fluid dark-background">
+                    <img src="assets/img/education/programs/preschool-1.jpeg" alt="Preschool" class="img-fluid dark-background">
                   </div>
                   <div class="program-body">
                     <h3>Preschool</h3>
@@ -187,7 +187,7 @@
               <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                 <div class="program-item graduate">
                   <div class="program-header">
-                    <img src="assets/img/education/activities-4.webp" alt="Elementary School" class="img-fluid">
+                    <img src="assets/img/education/programs/elementary.jpeg" alt="Elementary School" class="img-fluid">
                   </div>
                   <div class="program-body">
                     <h3>Elementary School</h3>
@@ -210,7 +210,7 @@
               <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                 <div class="program-item doctoral">
                   <div class="program-header">
-                    <img src="assets/img/education/activities-10.webp" alt="Middle School" class="img-fluid">
+                    <img src="assets/img/education/programs/middle.jpeg" alt="Middle School" class="img-fluid">
                   </div>
                   <div class="program-body">
                     <h3>Middle School</h3>
@@ -233,15 +233,15 @@
               <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                 <div class="program-item undergraduate">
                   <div class="program-header">
-                    <img src="assets/img/education/activities-2.webp" alt="High School" class="img-fluid">
+                    <img src="assets/img/education/programs/homeschooling.jpg" alt="High School" class="img-fluid">
                   </div>
                   <div class="program-body">
-                    <h3>High School</h3>
+                    <h3>Homeschooling</h3>
                     <p>Our High School prepares students for college and beyond with rigorous academics, leadership
                       opportunities, and global perspectives.</p>
                     <ul class="program-details">
                       <li><i class="bi bi-people"></i> Ages 14 - 18</li>
-                      <li><i class="bi bi-mortarboard-fill"></i> College Preparatory</li>
+                      <li><i class="bi bi-mortarboard-fill"></i> Home Preparatory</li>
                       <li><i class="bi bi-calendar-check"></i> Year-Round</li>
                     </ul>
                   </div>
@@ -256,7 +256,7 @@
               <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                 <div class="program-item graduate">
                   <div class="program-header">
-                    <img src="assets/img/education/activity-12.webp" alt="Learning Support" class="img-fluid">
+                    <img src="assets/img/education/programs/learning-support.jpeg" alt="Learning Support" class="img-fluid">
                   </div>
                   <div class="program-body">
                     <h3>Learning Support</h3>
@@ -291,7 +291,7 @@
               <div class="modal-body">
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/img/education/activities-4.webp" alt="Preschool" class="img-fluid rounded">
+                    <img src="assets/img/education/programs/preschool-1.jpeg" alt="Preschool" class="img-fluid rounded">
                   </div>
                   <div class="col-md-6">
                     <p>Our Preschool program at Brenitoch Schools introduces young learners to a world of discovery
@@ -385,7 +385,7 @@
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="highSchoolModalLabel">High School Program</h5>
+                <h5 class="modal-title" id="highSchoolModalLabel">Homeschooling Program</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -394,7 +394,7 @@
                     <img src="assets/img/education/activities-2.webp" alt="High School" class="img-fluid rounded">
                   </div>
                   <div class="col-md-6">
-                    <p>Our High School program (ages 14-18) at Brenitoch Schools prepares students for higher education
+                    <p>Our Homeschooling program (ages 14-18) at Brenitoch Schools prepares students for higher education
                       and global challenges with a rigorous college-preparatory curriculum, advanced placement courses,
                       and opportunities for leadership and global engagement.</p>
                     <ul>
